# llmeta-translation-api

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/services/: seamless.py  streaming.py
app/static/: index.html
